src/main/java/com/beebell/datespecs/DateRangeParser.java
// Generated from DateRange.g4 by ANTLR 4.5.1
package com.beebell.datespecs;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DateRangeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, ONE_DIGIT=54, TWO_DIGITS=55, THREE_DIGITS=56, FOUR_DIGITS=57, 
		THRU=58, WS=59;
	public static final int
		RULE_range = 0, RULE_startDate = 1, RULE_endDate = 2, RULE_dateTime = 3, 
		RULE_utc = 4, RULE_yyyymmdd = 5, RULE_shrtMdy = 6, RULE_longMdy = 7, RULE_optYearAndOrTime = 8, 
		RULE_year = 9, RULE_moy = 10, RULE_dom = 11, RULE_timespan = 12, RULE_tod = 13, 
		RULE_noon = 14, RULE_hour2 = 15, RULE_meridian = 16, RULE_hour = 17, RULE_minute = 18, 
		RULE_second = 19, RULE_weekDay = 20, RULE_shrtDay = 21, RULE_longDay = 22, 
		RULE_shrtMonth = 23, RULE_longMonth = 24;
	public static final String[] ruleNames = {
		"range", "startDate", "endDate", "dateTime", "utc", "yyyymmdd", "shrtMdy", 
		"longMdy", "optYearAndOrTime", "year", "moy", "dom", "timespan", "tod", 
		"noon", "hour2", "meridian", "hour", "minute", "second", "weekDay", "shrtDay", 
		"longDay", "shrtMonth", "longMonth"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Every'", "'from'", "','", "'T'", "':'", "'-'", "'+'", "'/'", "'.'", 
		"'noon'", "'AM'", "'am'", "'PM'", "'pm'", "'a.m.'", "'p.m.'", "'Sun'", 
		"'Mon'", "'Tue'", "'Wed'", "'Thu'", "'Fri'", "'Sat'", "'Sunday'", "'Monday'", 
		"'Tuesday'", "'Wednesday'", "'Thursday'", "'Friday'", "'Saturday'", "'Jan'", 
		"'Feb'", "'Mar'", "'Apr'", "'May'", "'Jun'", "'Jul'", "'Aug'", "'Sep'", 
		"'Oct'", "'Nov'", "'Dec'", "'January'", "'February'", "'March'", "'April'", 
		"'June'", "'July'", "'August'", "'September'", "'October'", "'November'", 
		"'December'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "ONE_DIGIT", "TWO_DIGITS", "THREE_DIGITS", 
		"FOUR_DIGITS", "THRU", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DateRange.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DateRangeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RangeContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(DateRangeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DateRangeParser.WS, i);
		}
		public LongDayContext longDay() {
			return getRuleContext(LongDayContext.class,0);
		}
		public StartDateContext startDate() {
			return getRuleContext(StartDateContext.class,0);
		}
		public TerminalNode THRU() { return getToken(DateRangeParser.THRU, 0); }
		public EndDateContext endDate() {
			return getRuleContext(EndDateContext.class,0);
		}
		public RangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitRange(this);
		}
	}

	public final RangeContext range() throws RecognitionException {
		RangeContext _localctx = new RangeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_range);
		try {
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(T__0);
				setState(51);
				match(WS);
				setState(52);
				longDay();
				setState(53);
				match(WS);
				setState(54);
				match(T__1);
				setState(55);
				match(WS);
				setState(56);
				startDate();
				setState(57);
				match(THRU);
				setState(58);
				endDate();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				startDate();
				setState(61);
				match(THRU);
				setState(62);
				endDate();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				startDate();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartDateContext extends ParserRuleContext {
		public DateTimeContext dateTime() {
			return getRuleContext(DateTimeContext.class,0);
		}
		public StartDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterStartDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitStartDate(this);
		}
	}

	public final StartDateContext startDate() throws RecognitionException {
		StartDateContext _localctx = new StartDateContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			dateTime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndDateContext extends ParserRuleContext {
		public DateTimeContext dateTime() {
			return getRuleContext(DateTimeContext.class,0);
		}
		public EndDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterEndDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitEndDate(this);
		}
	}

	public final EndDateContext endDate() throws RecognitionException {
		EndDateContext _localctx = new EndDateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_endDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			dateTime();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateTimeContext extends ParserRuleContext {
		public UtcContext utc() {
			return getRuleContext(UtcContext.class,0);
		}
		public ShrtMdyContext shrtMdy() {
			return getRuleContext(ShrtMdyContext.class,0);
		}
		public YyyymmddContext yyyymmdd() {
			return getRuleContext(YyyymmddContext.class,0);
		}
		public LongMdyContext longMdy() {
			return getRuleContext(LongMdyContext.class,0);
		}
		public WeekDayContext weekDay() {
			return getRuleContext(WeekDayContext.class,0);
		}
		public TerminalNode WS() { return getToken(DateRangeParser.WS, 0); }
		public DateTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dateTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterDateTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitDateTime(this);
		}
	}

	public final DateTimeContext dateTime() throws RecognitionException {
		DateTimeContext _localctx = new DateTimeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dateTime);
		int _la;
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				utc();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				shrtMdy();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				yyyymmdd();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				longMdy();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75);
				weekDay();
				setState(77);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(76);
					match(T__2);
					}
				}

				setState(79);
				match(WS);
				setState(80);
				longMdy();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UtcContext extends ParserRuleContext {
		public YyyymmddContext yyyymmdd() {
			return getRuleContext(YyyymmddContext.class,0);
		}
		public List<HourContext> hour() {
			return getRuleContexts(HourContext.class);
		}
		public HourContext hour(int i) {
			return getRuleContext(HourContext.class,i);
		}
		public List<MinuteContext> minute() {
			return getRuleContexts(MinuteContext.class);
		}
		public MinuteContext minute(int i) {
			return getRuleContext(MinuteContext.class,i);
		}
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public UtcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_utc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterUtc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitUtc(this);
		}
	}

	public final UtcContext utc() throws RecognitionException {
		UtcContext _localctx = new UtcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_utc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			yyyymmdd();
			setState(85);
			match(T__3);
			setState(86);
			hour();
			setState(87);
			match(T__4);
			setState(88);
			minute();
			setState(89);
			match(T__4);
			setState(90);
			second();
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__6) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(92);
			hour();
			setState(93);
			match(T__4);
			setState(94);
			minute();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YyyymmddContext extends ParserRuleContext {
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public MoyContext moy() {
			return getRuleContext(MoyContext.class,0);
		}
		public DomContext dom() {
			return getRuleContext(DomContext.class,0);
		}
		public YyyymmddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_yyyymmdd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterYyyymmdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitYyyymmdd(this);
		}
	}

	public final YyyymmddContext yyyymmdd() throws RecognitionException {
		YyyymmddContext _localctx = new YyyymmddContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_yyyymmdd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			year();
			setState(97);
			match(T__5);
			setState(98);
			moy();
			setState(99);
			match(T__5);
			setState(100);
			dom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShrtMdyContext extends ParserRuleContext {
		public MoyContext moy() {
			return getRuleContext(MoyContext.class,0);
		}
		public DomContext dom() {
			return getRuleContext(DomContext.class,0);
		}
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public ShrtMdyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shrtMdy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterShrtMdy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitShrtMdy(this);
		}
	}

	public final ShrtMdyContext shrtMdy() throws RecognitionException {
		ShrtMdyContext _localctx = new ShrtMdyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shrtMdy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			moy();
			setState(103);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(104);
			dom();
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==T__5 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(106);
			year();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LongMdyContext extends ParserRuleContext {
		public LongMonthContext longMonth() {
			return getRuleContext(LongMonthContext.class,0);
		}
		public TerminalNode WS() { return getToken(DateRangeParser.WS, 0); }
		public DomContext dom() {
			return getRuleContext(DomContext.class,0);
		}
		public OptYearAndOrTimeContext optYearAndOrTime() {
			return getRuleContext(OptYearAndOrTimeContext.class,0);
		}
		public ShrtMonthContext shrtMonth() {
			return getRuleContext(ShrtMonthContext.class,0);
		}
		public LongMdyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_longMdy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterLongMdy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitLongMdy(this);
		}
	}

	public final LongMdyContext longMdy() throws RecognitionException {
		LongMdyContext _localctx = new LongMdyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_longMdy);
		int _la;
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				longMonth();
				setState(109);
				match(WS);
				setState(110);
				dom();
				setState(112);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(111);
					match(T__2);
					}
				}

				setState(115);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(114);
					optYearAndOrTime();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				shrtMonth();
				setState(119);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(118);
					match(T__8);
					}
				}

				setState(121);
				match(WS);
				setState(122);
				dom();
				setState(124);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(123);
					match(T__2);
					}
				}

				setState(127);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(126);
					optYearAndOrTime();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptYearAndOrTimeContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(DateRangeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DateRangeParser.WS, i);
		}
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public TimespanContext timespan() {
			return getRuleContext(TimespanContext.class,0);
		}
		public OptYearAndOrTimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optYearAndOrTime; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterOptYearAndOrTime(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitOptYearAndOrTime(this);
		}
	}

	public final OptYearAndOrTimeContext optYearAndOrTime() throws RecognitionException {
		OptYearAndOrTimeContext _localctx = new OptYearAndOrTimeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_optYearAndOrTime);
		int _la;
		try {
			setState(143);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(WS);
				setState(132);
				year();
				setState(134);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(133);
					match(T__2);
					}
				}

				setState(136);
				match(WS);
				setState(137);
				timespan();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				match(WS);
				setState(140);
				year();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(141);
				match(WS);
				setState(142);
				timespan();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YearContext extends ParserRuleContext {
		public TerminalNode FOUR_DIGITS() { return getToken(DateRangeParser.FOUR_DIGITS, 0); }
		public YearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_year; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitYear(this);
		}
	}

	public final YearContext year() throws RecognitionException {
		YearContext _localctx = new YearContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_year);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(FOUR_DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoyContext extends ParserRuleContext {
		public TerminalNode ONE_DIGIT() { return getToken(DateRangeParser.ONE_DIGIT, 0); }
		public TerminalNode TWO_DIGITS() { return getToken(DateRangeParser.TWO_DIGITS, 0); }
		public MoyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moy; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterMoy(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitMoy(this);
		}
	}

	public final MoyContext moy() throws RecognitionException {
		MoyContext _localctx = new MoyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_moy);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_la = _input.LA(1);
			if ( !(_la==ONE_DIGIT || _la==TWO_DIGITS) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomContext extends ParserRuleContext {
		public TerminalNode ONE_DIGIT() { return getToken(DateRangeParser.ONE_DIGIT, 0); }
		public TerminalNode TWO_DIGITS() { return getToken(DateRangeParser.TWO_DIGITS, 0); }
		public DomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterDom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitDom(this);
		}
	}

	public final DomContext dom() throws RecognitionException {
		DomContext _localctx = new DomContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_la = _input.LA(1);
			if ( !(_la==ONE_DIGIT || _la==TWO_DIGITS) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimespanContext extends ParserRuleContext {
		public List<TodContext> tod() {
			return getRuleContexts(TodContext.class);
		}
		public TodContext tod(int i) {
			return getRuleContext(TodContext.class,i);
		}
		public TerminalNode THRU() { return getToken(DateRangeParser.THRU, 0); }
		public TimespanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timespan; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterTimespan(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitTimespan(this);
		}
	}

	public final TimespanContext timespan() throws RecognitionException {
		TimespanContext _localctx = new TimespanContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_timespan);
		try {
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(151);
				tod();
				setState(152);
				match(THRU);
				setState(153);
				tod();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				tod();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TodContext extends ParserRuleContext {
		public NoonContext noon() {
			return getRuleContext(NoonContext.class,0);
		}
		public Hour2Context hour2() {
			return getRuleContext(Hour2Context.class,0);
		}
		public MinuteContext minute() {
			return getRuleContext(MinuteContext.class,0);
		}
		public TerminalNode WS() { return getToken(DateRangeParser.WS, 0); }
		public MeridianContext meridian() {
			return getRuleContext(MeridianContext.class,0);
		}
		public TodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterTod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitTod(this);
		}
	}

	public final TodContext tod() throws RecognitionException {
		TodContext _localctx = new TodContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_tod);
		int _la;
		try {
			setState(170);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				noon();
				}
				break;
			case ONE_DIGIT:
			case TWO_DIGITS:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(159);
				hour2();
				setState(162);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(160);
					match(T__4);
					setState(161);
					minute();
					}
				}

				setState(165);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(164);
					match(WS);
					}
				}

				setState(168);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15))) != 0)) {
					{
					setState(167);
					meridian();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NoonContext extends ParserRuleContext {
		public NoonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_noon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).enterNoon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DateRangeListener ) ((DateRangeListener)listener).exitNoon(this);
		}
	}

	public final NoonContext noon() throws RecognitionException {
		NoonContext _localctx = new NoonContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_noon);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
